# disco-daemon

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  README.md  alembic.ini  dev-deploy.sh  development.ini  docker-compose.yml  production.ini  pyproject.toml  requirements-base.txt  requirements.in  requirements.txt  setup.py
.devcontainer/: devcontainer.json
disco/: app.py  auth.py  config.py  errors.py  middleware.py  pshell.py  worker.py
disco/alembic/: env.py  script.py.mako
disco/endpoints/: apikeyinvites.py  apikeys.py  cgi.py  corsorigins.py  dependencies.py  deployments.py  envvariables.py  events.py  githubapps.py  loaders.py  logs.py  meta.py  nodes.py  projectdomains.py  projectkeyvalues.py  projects.py  registries.py  run.py  scale.py  shell.py  syslog.py  tunnels.py  volumes.py
disco/http/: __init__.py  app.py  auth.py
disco/models/: __init__.py  apikey.py  apikeyinvite.py  apikeyusage.py  authenticationtoken.py  commandoutput.py  commandrun.py  corsorigin.py  db.py  deployment.py  deploymentenvironmentvariable.py  deploymentpublishedport.py  deploymentvolume.py  githubapp.py  githubappinstallation.py  githubapprepo.py  keyvalue.py  meta.py  pendinggithubapp.py  project.py  projectdomain.py  projectenvironmentvariable.py  projectgithubrepo.py  projectkeyvalue.py  projectpublishedport.py  projectvolume.py  task.py
disco/scripts/: add_disco_domain.py  create_api_key.py  init.py  leave_swarm.py  set_domain.py  setcorelogging.py  update.py
disco/utils/: apikeyinvites.py  apikeys.py  asyncworker.py  auth.py  caddy.py  commandoutputs.py  commands.py  (+31 more)
(+50 files in other folders)
