[project]
name = "disco"
dynamic = ["version"]

[tool.setuptools]
packages = ["disco"]

[tool.setuptools.dynamic]
version = {attr = "disco.__version__"}

[project.scripts]
disco_worker = "disco.worker:main"
disco_init = "disco.scripts.init:main"
disco_update = "disco.scripts.update:main"
disco_leave_swarm = "disco.scripts.leave_swarm:main"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true
